# you-are-agent

./: .gitignore  LICENSE  README.md  config.json.sample  config_manager.py  main.py  mcp_client.py  mcp_server_mock.py  pyproject.toml
mcp_server/: weather.py
views/: home_view.py  settings_view.py  tool_view.py
