[project]
name = "you-are-agent"
version = "0.1.0"
description = "You are an agent."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flet[all]",
    "aiohttp",
    "httpx",
    "fastapi",
    "uvicorn[standard]",
    "mcp[cli]"
]

[dependency-groups]
dev = [
    "ruff>=0.11.4",
]

[tool.ruff]
line-length = 120
target-version = "py312"
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    ".venv",
    "__pycache__",
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle error
    "F",  # pyflakes
    "W",  # pycodestyle warning
    "I",  # isort
    "C4",  # flake8-comprehensions
    "PT",  # flake8-pytest-style
    "RSE",  # flake8-raise
    "TID",  # flake8-tidy-imports
    "TCH",  # flake8-type-checking
    "FLY",  # flynt
    "NPY",  # numPy-specific rules
    "RUF",  # ruff-specific rules
    "T10",  # flake8-debugger
]
ignore = [
    "PLR",  # pylint refactor
    "C90",  # mccabe,
    "RUF001",
    "RUF002",
    "RUF003",
]
fixable = ["ALL"]
unfixable = [
    "F401",  # unused-import
]
